--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -1,9 +1,12 @@
-{% extends 'base.html' %}
-{% block title %}Лента записей{% endblock %}
+{% extends "base.html" %}
+{% block title %}
+  Лента записей
+{% endblock %}
 {% block content %}
-  <h1>Лента записей</h1>
-  <hr>
-{% for post in posts %}
-  {% include "includes/post.html" %}
-{% endfor %}
+  <h1 class="mb-5">Лента записей</h1>
+  {% for post in post_list %}
+    <article class="mb-5">  
+      {% include "includes/post_card.html" %}
+    </article>   
+  {% endfor %}
 {% endblock %}
